@YELP_HELP_RULES@

HELP_ID = gpinstruct

HELP_MEDIA = \
	figures/gpinstruct-logo.png \
	figures/gpinstruct-screenshot.png \
	figures/gpinstruct-viewer-screenshot.png \
	figures/gpinstruct-editor-screenshot.png \
	figures/gpinstruct-analyzer-screenshot.png \
	figures/gpinstruct-server-screenshot.png \
	figures/gpinstruct-client-screenshot.png

HELP_FILES = \
	index.page \
	gpinstruct-quickstart.page \
	gpinstruct-applications.page \
	gpinstruct-project-structure.page
